--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=web
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/db_magic?allowPublicKeyRetrieval=true
 spring.datasource.username=springuser
 spring.datasource.password=passwort1234
@@ -11,3 +11,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.password=password
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.jpa.show-sql: true
+vaadin.devmode.hostsAllowed=localhost, 127.0.0.1
