--- a/.github/workflows/pipeline-deploy.yml
+++ b/.github/workflows/pipeline-deploy.yml
@@ -8,12 +8,22 @@
 name: Deployment
 
 on:
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+        type: choice
+        options:
+          - info
+          - warning
+          - debug
   push:
     branches: [ "main" ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -33,34 +43,12 @@ jobs:
 
       - name: Build with Gradle Wrapper
         run: ./gradlew test war
+      - name: Add SSH Key
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.PI_SSH_SECRET }}
+      - name: Transfer files via SCP
+        run: scp -r build/libs/* jane@${{ secrets.PI_HOST }}:~/deploy
 
-    # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
-    # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
-    #
-    #    - name: Setup Gradle
-    #      uses:
-    #         gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
-    #      with:
-    #         gradle-version: '8.6'
-    #
-    #    - name: Build with Gradle 8.6
-    #      run: gradle build test
-
-    # dependency-submission:
-
-    #  runs-on: ubuntu-latest
-    #  permissions:
-    #    contents: write
-
-    #  steps:
-    #  - uses: actions/checkout@v4
-    #  - name: Set up JDK 17
-    #    uses: actions/setup-java@v4
-    #    with:
-    #      java-version: '17'
-    #      distribution: 'temurin'
-
-    # Generates and submits a dependency graph, enabling Dependabot Alerts for all project dependencies.
-    # See: https://github.com/gradle/actions/blob/main/dependency-submission/README.md
-    #- name: Generate and submit dependency graph
-    #  uses: gradle/actions/dependency-submission@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
+      - name: Execute remote SSH commands
+        run: ssh jane@${{ secrets.PI_HOST }} 'bash -s' < ./deploy_scripts/deploy.sh
